[package]
name          = "atomr-agents-cache"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
description   = "LLM cache (in-memory, semantic) + middleware integration."

keywords      = ["agents", "cache", "llm", "semantic", "atomr"]
categories    = ["asynchronous", "caching"]
readme        = "../../README.md"

[dependencies]
atomr-agents-core  = { workspace = true }
atomr-agents-embed = { workspace = true }
atomr-infer-core   = { workspace = true }
async-trait        = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
parking_lot        = { workspace = true }

[features]
default = []
sqlite  = []
redis   = []

[dev-dependencies]
tokio = { workspace = true }
