[package]
name          = "atomr-agents-callable"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
description   = "Callable trait unifying agents, workflows, tools, and harnesses."

keywords      = ["agents", "callable", "atomr", "ai", "lcel"]
categories    = ["asynchronous", "rust-patterns"]
readme        = "../../README.md"

[dependencies]
atomr-agents-core = { workspace = true }
atomr-core        = { workspace = true }
async-trait       = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
thiserror         = { workspace = true }
tokio             = { workspace = true }

[dev-dependencies]
