[package]
name          = "atomr-agents-channel-core"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
description   = "Channel + thread domain types for messaging-style transports (WhatsApp, Signal, Discord, in-memory). Defines the ChannelProvider trait, ChannelStore, ChannelEvent stream, ThreadTarget enum, HarnessInputAdapter, and the in-memory provider used for tests."

keywords      = ["agents", "channel", "messaging", "atomr"]
categories    = ["asynchronous"]
readme        = "README.md"

[features]
default = []
state   = ["dep:atomr-agents-state"]

[dependencies]
atomr-agents-core          = { workspace = true }
atomr-agents-callable      = { workspace = true }
atomr-agents-observability = { workspace = true }
atomr-agents-state         = { workspace = true, optional = true }

async-trait  = { workspace = true }
tokio        = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
parking_lot  = { workspace = true }
dashmap      = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
bytes        = { workspace = true }
http         = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
