[package]
name          = "atomr-agents-channel-provider-whatsapp"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
description   = "WhatsApp Business Cloud API provider for atomr-agents channels. Outbound REST, HMAC-SHA256 webhook verification, and two-step media download."

keywords      = ["agents", "channel", "whatsapp", "atomr"]
categories    = ["asynchronous"]
readme        = "README.md"

[dependencies]
atomr-agents-channel-core = { workspace = true }

async-trait  = { workspace = true }
tokio        = { workspace = true, features = ["sync", "rt", "macros", "time"] }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
bytes        = { workspace = true }
http         = "1"
reqwest      = { workspace = true }
hmac         = "0.12"
sha2         = "0.10"
hex          = "0.4"
subtle       = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
