[package]
name          = "atomr-agents-cli"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
description   = "atomr-agents CLI: harness eval run / registry list / harness pin / eval gate."

keywords      = ["agents", "cli", "atomr", "ai", "llm"]
categories    = ["command-line-utilities"]
readme        = "../../README.md"

[[bin]]
name = "atomr-agents"
path = "src/main.rs"

[dependencies]
atomr-agents-core     = { workspace = true }
atomr-agents-harness  = { workspace = true }
atomr-agents-eval     = { workspace = true }
atomr-agents-registry = { workspace = true }
atomr-agents-state    = { workspace = true }
clap                  = { workspace = true }
tokio                 = { workspace = true }
anyhow                = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
tracing               = { workspace = true }
tracing-subscriber    = { workspace = true }
