[package]
name          = "atomr-agents-cli"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
description   = "atomr-agents CLI: harness eval run / registry list / harness pin / eval gate."

keywords      = ["agents", "cli", "atomr", "ai", "llm"]
categories    = ["command-line-utilities"]
readme        = "../../README.md"

[[bin]]
name = "atomr-agents"
path = "src/main.rs"

[features]
default = []
# Compile in the STT-harness web UI so `atomr-agents serve` runs a real
# axum server instead of printing the inspector endpoint list.
stt-web = [
    "dep:atomr-agents-stt-harness",
    "dep:atomr-agents-stt-harness-web",
    "atomr-agents-stt-harness/state",
]
# Compile in the meetings-harness CLI + web UI for `atomr-agents meetings`.
meetings = [
    "dep:atomr-agents-stt-harness",
    "atomr-agents-stt-harness/state",
    "dep:atomr-agents-meetings-harness",
    "atomr-agents-meetings-harness/state",
]
meetings-web = [
    "meetings",
    "dep:atomr-agents-meetings-harness-web",
    "atomr-agents-meetings-harness-web/state",
]

[dependencies]
atomr-agents-core     = { workspace = true }
atomr-agents-harness  = { workspace = true }
atomr-agents-eval     = { workspace = true }
atomr-agents-registry = { workspace = true }
atomr-agents-state    = { workspace = true }
atomr-agents-stt-harness     = { workspace = true, optional = true }
atomr-agents-stt-harness-web = { workspace = true, optional = true }
atomr-agents-meetings-harness     = { workspace = true, optional = true }
atomr-agents-meetings-harness-web = { workspace = true, optional = true }
clap                  = { workspace = true }
tokio                 = { workspace = true }
anyhow                = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
tracing               = { workspace = true }
tracing-subscriber    = { workspace = true }
