[package]
name          = "atomr-agents-coding-cli-core"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
description   = "Uniform input/output contract and vendor trait for the coding-cli harness: request, result, normalized event schema, concept projection, and the CliVendor seam."

keywords      = ["agents", "cli", "harness", "atomr"]
categories    = ["asynchronous"]
readme        = "README.md"

[dependencies]
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
tokio        = { workspace = true }

[dev-dependencies]
