[package]
name          = "atomr-agents-coding-cli-isolator"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
description   = "Isolator trait + Local and Docker implementations for the coding-cli harness. Spawns CLI processes on the host or in a container with optional PTY."

keywords      = ["agents", "cli", "docker", "atomr"]
categories    = ["asynchronous"]
readme        = "README.md"

[features]
default = ["docker"]
# Build the Docker isolator backend.
docker  = ["dep:bollard", "dep:futures-util"]

[dependencies]
atomr-agents-coding-cli-core = { workspace = true }

async-trait  = { workspace = true }
tokio        = { workspace = true, features = ["full"] }
futures      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
parking_lot  = { workspace = true }
bytes        = { workspace = true }

portable-pty = "0.9"

# Optional Docker backend
bollard      = { version = "0.17", optional = true }
futures-util = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
