[package]
name          = "atomr-agents-coding-cli-vendor-claude"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
description   = "Claude Code adapter for the coding-cli harness: stream-json parser + concept projection (CLAUDE.md, skills, MCP, settings)."

keywords      = ["agents", "claude", "cli", "atomr"]
categories    = ["asynchronous"]
readme        = "README.md"

[dependencies]
atomr-agents-coding-cli-core = { workspace = true }

async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true, features = ["fs", "process"] }
tracing      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
