[package]
name          = "atomr-agents-deep-research-core"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
description   = "Uniform input/output contract for deep-research harnesses: request, result, citation, plan, telemetry types."

keywords      = ["agents", "research", "atomr"]
categories    = ["asynchronous"]
readme        = "README.md"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
url        = { workspace = true }
chrono     = { workspace = true }
uuid       = { workspace = true }

[dev-dependencies]
