[package]
name          = "atomr-agents-deep-research-shell"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
description   = "Two-tier outer shell for atomr-agents deep research: intent classifier routes between a fast shallow path and the full deep harness."
keywords      = ["agents", "research", "router", "atomr"]
categories    = ["asynchronous"]
readme        = "README.md"

[features]
default = []

[dependencies]
atomr-agents-core                  = { workspace = true }
atomr-agents-callable              = { workspace = true }
atomr-agents-web-search-core       = { workspace = true }
atomr-agents-deep-research-core    = { workspace = true }
atomr-agents-deep-research-harness = { workspace = true }

async-trait = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
url         = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
